plugins {
    id "com.github.nwillc.vplugin" version "1.2.5"
//    //id "pl.squirrel.classycle" version "1.1"
//    //id "com.github.nullstress.dependency-analysis" version "1.0.3"
//    //id "com.github.tkruse.groovysh" version "1.0.8"  //https://github.com/tkruse/gradle-groovysh-plugin
//    id 'nebula.metrics' version '4.0.1' //https://github.com/nebula-plugins/gradle-metrics-plugin
    id 'com.github.ksoichiro.console.reporter' version '0.3.4'

}



allprojects {

    apply plugin: 'java'

    //apply plugin: 'maven'
    apply plugin: 'build-dashboard'
    apply plugin: 'jdepend'
    apply plugin: 'project-report'
    apply plugin: 'com.github.nwillc.vplugin'



    //https://github.com/evant/gradle-retrolambda

    group = 'opennars'
    version = '1.7-SNAPSHOT'

//    buildscript {
//        repositories {
//            //mavenCentral()
//            //jcenter()
//        }
//
//        dependencies {
//            //classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
//            // classpath 'org.codehaus.groovy:groovy-backports-compat23:2.3.5' // uncomment if you're using Gradle 1.x
//        }
//    }
//
    tasks.withType(JavaCompile) {
        options.incremental = true
    }


}

//dependencies {
//    compile group: 'org.bytedeco', name: 'javacpp', version: '1.1'
//}

subprojects {

    //apply plugin: 'com.github.ben-manes-versions'

    sourceCompatibility = 1.8
    targetCompatibility = 1.8




    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://jitpack.io" }
        maven { url "http://maven.cs.lth.se/content/repositories/public/" }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
    }

    test {
        reports.html.enabled = true
        ignoreFailures = true
    }


}



task testReport(type: TestReport) {
    destinationDir = file("$buildDir/reports/allTests")
    // Include the results from the `test` task in all subprojects
    reportOn subprojects*.test
}




